# KISS

./: .clang-format  .clang-tidy  .flake8  .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  FreeRTOS_Kernel_import.cmake  LICENSE  README.md  SECURITY.md  build.sh  config.env.template  demo.sh  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  documentation.yml  quality.yml
cmake/: README.md  clang-format-config.yaml
docs/: alpha-roadmap.md  api-reference.md  conf.py  development.md  fuzzing-ui-integration.md  getting-started.md  hardware.md  index.md  requirements.txt  setup-i18n.sh  setup-multilang.sh  software.md  translation-setup.sh  troubleshooting.md  tutorials.md
hardware/: BOM.md  README.md  components-summary.md  pinout.md
hardware/bom/: KISS-Fuzzer-BOM-v1.0.csv  README.md
hardware/datasheets/: README.md
hardware/docs/: BOM.md  assembly-guide.md  components-summary.md  pinout.md
hardware/gerber/: KISS-Fuzzer-sample.gbrjob  README.md
hardware/pickandplace/: KISS-Fuzzer-sample-pos.csv  README.md
hardware/stl/: README.md
scripts/: audit-security.sh  setup-dev-tools.py  setup-linux-ubuntu.sh  setup-macos-arm64.sh  setup-windows.ps1  setup.sh  test-build-system.sh
src/: FreeRTOSConfig.h  crash_detection.c  crash_detection.h  display.c  display.h  ff.c  ff.h  fuzz_commands.c  fuzz_commands.h  input.c  input.h  jtag.c  jtag.h  jtag.pio  jtag_fuzzer.c  jtag_fuzzer.h  kiss_fuzzer.h  lwipopts.h  main.c  main_new.c  power.c  power.h  storage.c  storage.h  ui.c  ui.h  wifi.c  wifi.h
src/arch/: sys_arch.h
src_legacy/: jtag.c  jtag.h  jtag.pio  lwipopts.h  main.c  power.h  storage.c  ui.h  wifi.c  wifi.h
tests/: CMakeLists.txt  README.md
tests/mocks/: mock_hardware.c  mock_hardware.h
tests/unit/: test_display.c
wiki/: Bug-Bounty-Program.md  FAQ.md  Hall-of-Fame.md  Home-DE.md  Home-ES.md  Home-ID.md  Home-RO.md  Home-ZH.md  Home.md  Security-Policy.md
